app/app/ingress-argo-template.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argo
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: ${INGRESS_IP}.argo.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
